# Django-apirestful-consultas

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: runtest.yml  test.yml
clientes/: models.py  serializers.py  tests.py  urls.py  validador_cpf.py  views.py
clientes/migrations/: 0001_initial.py  0002_alter_cadastroclientes_cpf.py  0003_pagamentodeconsulta.py  0004_rename_pagamentodeconsulta_pagamentoconsulta.py  0005_rename_pagamentoconsulta_pagamentoconsultas.py  0006_pagamentoconsultas_preco_consulta_and_more.py  0007_cadastroclientes_asaas_customer_id.py  0008_pagamentoconsultas_data_vencimento.py  0009_pagamentoconsultas_asaas_payment_id.py  0010_alter_pagamentoconsultas_metodo_de_pagamento.py  0011_alter_cadastroclientes_cpf.py
consultas/: admin.py  integracao_assas.py  models.py  serializers.py  tests.py  urls.py  views.py
consultas/migrations/: 0001_initial.py  0002_consultas_nome_social_cliente.py  0002_rename_dataconsulta_agendamentosconsultas_data_consulta_and_more.py  0003_remove_agendamentosconsultas_hora_consulta_and_more.py  0004_rename_data_consulta_agendamentosconsultas_data_consulta.py  0005_alter_agendamentosconsultas_data_consulta.py  0006_remove_agendamentosconsultas_nome_social_cliente_and_more.py  (+2 more)
lacreisaude/: asgi.py  settings.py  urls.py  wsgi.py
profissionais/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
profissionais/migrations/: 0001_initial.py  (+2 more)
users/: models.py  serializers.py  tests.py  urls.py  views.py
(+2 files in other folders)
