[project]
name = "lacrei"
version = "0.1.0"
description = "Projeto desafio backend para a Lacrei Saude"
authors = [
    {name = "jon1nline",email = "www.jhonattan@hotmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.2,<6.0.0)",
    "drf-yasg (>=1.21.10,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
